--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "await-of": "^3.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "nanoid": "^3.1.25",
     "quasar": "^2.0.0"
