--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "await-of": "^3.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.21",
     "nanoid": "^3.1.25",
     "quasar": "^2.0.0"
   },
